# Beat-Tracking-Evaluation-Toolbox

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  beat_evaluation_toolbox.py  pyproject.toml
.github/workflows/: main.yml
cpp/python-module/: INSTALL.md  beat_tracking_evaluation_toolbox_python_module.cpp  example.py  setup.py
cpp/src/: BeatTrackingEvaluationToolbox.h  CMakeLists.txt
cpp/tests/: Test_Continuity.cpp  Test_FMeasure.cpp
doc/: Doxyfile
doc/html/: index.html  md__r_e_a_d_m_e.html  namespacebeat__evaluation__toolbox.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_70.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_69.js  functions_70.js  namespaces_62.js  pages_62.js  search.js  variables_63.js  variables_64.js  variables_66.js  variables_67.js  variables_69.js  variables_70.js
python-module/: beat_tracking_evaluation_toolbox_python_module.cpp  setup.py
src/: BeatTrackingEvaluationToolbox.cpp  BeatTrackingEvaluationToolbox.h
src/beat_tracking_evaluation/: __init__.py  evaluation.py
tests/: CMakeLists.txt  TestHelpers.h  TestSignals.cpp  TestSignals.h  Test_CemgilAccuracy.cpp  Test_Continuity.cpp  Test_FMeasure.cpp  Test_PScore.cpp
unit-tests/BeatTrackingEvaluationToolbox/: main.cpp
unit-tests/BeatTrackingEvaluationToolbox.xcodeproj/: project.pbxproj
(+4 files in other folders)
